--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "aurelia-fetch-client": "^1.1.3",
     "bluebird": "^3.4.1",
     "bootstrap": "^3.3.7",
+    "flatpickr": "^4.1.4",
     "jquery": "^2.2.4",
     "moment": "^2.19.2",
     "regenerator-runtime": "^0.11.0",
